[imad-console] Updates ui/newfile.html

--- a/ui/newfile.html
+++ b/ui/newfile.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            Page 1:Adithyan
+        </title>
+    </head>
+    <body>
+        <div>
+            <d href="/">Home</d>
+        </div>
+        <hr/>
+        <h3>
+            First Article 
+        </h3>
+        <div>
+             September 28,2018
+        </div>
+        <div>
+            <p>
+                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+            </p>
+            <p>
+                NEW CREATION.WANT TO DO MORE...
+                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+            </p>
+        </div>
+    </body>
 </html>
