--- a/ui/newfile.html
+++ b/ui/newfile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <d href="/">Home</d>
+            <a href="/">Home</a>
         </div>
         <hr/>
         <h3>
