[imad-console] Updates ui/article2.html

--- a/ui/article2.html
+++ b/ui/article2.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Page 1:Adithyan
+            Page 2:Adithyan
         </title>
         <meta name="viewport" content="width-device-width,initial-scale-1"/>
     </head>
@@ -11,20 +11,25 @@
         </div>
         <hr/>
         <h3>
-            First Article 
+             Article Two
         </h3>
         <div>
              September 28,2018
+             20:06
         </div>
         <div>
             <p>
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+                I AM ADITHYAN C.R.THIS IS MY SECOND HTML PAGE.
+                I AM ADITHYAN C.R.I AM CREATING MY SECOND HTML PAGE.
             </p>
             <p>
                 NEW CREATION.WANT TO DO MORE...
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+            </p>
+            <p>  
+                I AM ADITHYAN C.R.....I AM CREATING MY SECOND HTML PAGE.
+            </p> 
+            <p>
+                I AM ADITHYAN C.R.I AM CREATING MY SECOND HTML PAGE......
             </p>
         </div>
     </body>
