[imad-console] Updates ui/article3.html

--- a/ui/article3.html
+++ b/ui/article3.html
@@ -19,13 +19,13 @@
         </div>
         <div>
             <p>
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+                I AM ADITHYAN C.R.I AM CREATING MY THIRD HTML PAGE.
+                I AM ADITHYAN C.R.Its the THIRD HTML PAGE.
             </p>
             <p>
                 NEW CREATION.WANT TO DO MORE...
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
-                I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
+                I AM ADITHYAN C.R.I AM CREATING MY THIRD HTML PAGE.
+                I AM ADITHYAN C.R.I AM CREATING MY THIRD HTML PAGE.
             </p>
         </div>
     </body>
