[imad-console] Updates ui/newfile.html

--- a/ui/newfile.html
+++ b/ui/newfile.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width-device-width,initial-scale-1"/>
     </head>
     <body>
+        <div class=container>
         <div>
             <a href="/">Home</a>
         </div>
@@ -26,6 +27,7 @@
                 I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
                 I AM ADITHYAN C.R.I AM CREATING MY FISRT HTML PAGE.
             </p>
+        </div>
         </div>
     </body>
 </html>
