--- a/ui/newfile.html
+++ b/ui/newfile.html
@@ -4,6 +4,14 @@
             Page 1:Adithyan
         </title>
         <meta name="viewport" content="width-device-width,initial-scale-1"/>
+        <style>
+            .container{padding-left: 60px;
+                       padding-right: 90px;
+                       font-style: italic;
+                       font-family: sans-serif;
+                       color: chocolate;
+            }
+        </style>
     </head>
     <body>
         <div class=container>
