--- a/ui/article2.html
+++ b/ui/article2.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width-device-width,initial-scale-1"/>
     </head>
     <body>
+        <div class="contain">
         <div>
             <a href="/">Home</a>
         </div>
@@ -31,6 +32,7 @@
             <p>
                 I AM ADITHYAN C.R.I AM CREATING MY SECOND HTML PAGE......
             </p>
+        </div>
         </div>
     </body>
 </html>
