[imad-console] Updates ui/article2.html

--- a/ui/article2.html
+++ b/ui/article2.html
@@ -4,9 +4,16 @@
             Page 2:Adithyan
         </title>
         <meta name="viewport" content="width-device-width,initial-scale-1"/>
+        <style>
+            .contain{
+                padding: 60px;
+                font-size: medium;
+                color: cornflowerblue;
+            }
+        </style>
     </head>
     <body>
-        <div class="contain">
+        <div class=contain>
         <div>
             <a href="/">Home</a>
         </div>
