--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! Welcome to Adithyan's Web app!!
+        <div class=container>
+            <div class="center">
+                <img src="/ui/madi.png" class="img-medium"/>
+            </div>
+            <br>
+            <div class="center text-big bold">
+                Hi! Welcome to Adithyan's Home Page!!
+            </div>
+            <h3>
+                Personal Details
+            </h3>
+            <div>
+
+                Student,Class XII
+            
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>    
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
