--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class=container>
             <div class="center">
-                <img src="/ui/madi.png" class="img-medium"/>
+                <img src="https://lh3.googleusercontent.com/-0zwOFHchkng/Vh5v_WropQI/AAAAAAAAAEE/fya30xk0OeY3AY6NmMmZTjrrjVqNQBXCgCEwYBhgL/w140-h140-p/Photo0044.jpg" class="img-medium"/>
             </div>
             <br>
             <div class="center text-big bold">
